Adds a scroll to top button.

--- a/app/src/main/assets/web/index.html
+++ b/app/src/main/assets/web/index.html
@@ -28,6 +28,10 @@
 <img id="image"/>
 
 
+<div class="control-bottom">
+  <a href="#" onclick="scrollToTop()" class="btn btn-sm">Up</a>
+</div>
+
 <div id="version"></div>
 </body>
 </html>
